--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,14 @@ body {
   left:310px;
 }
 
+#dropbox {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:340px;
+  left:380px;
+}
+
 #programming {
   position: absolute;
   padding-top: 10px;
@@ -183,22 +191,36 @@ body {
   left:240px;
 }
 
-#translate {
-  position: absolute;
-  padding-top: 10px;
-  height: 50px;
-  width: 200px;
-  top:500px;
-  left:30px;
-  text-align: center;
-}
-
-#gtranslate {
+#javarush {
   position: absolute;
   height: 60px;
   width: 60px;
-  top:500px;
-  left:240px;
+  top:420px;
+  left:310px;
+}
+
+#ideone {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:420px;
+  left:380px;
+}
+
+#wolfram {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:420px;
+  left:450px;
+}
+
+#mathway {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:420px;
+  left:520px;
 }
 
 #read {
@@ -206,7 +228,7 @@ body {
   padding-top: 10px;
   height: 50px;
   width: 200px;
-  top:580px;
+  top:500px;
   left:30px;
   text-align: center;
 }
@@ -215,12 +237,55 @@ body {
   position: absolute;
   height: 60px;
   width: 60px;
+  top:500px;
+  left:240px;
+}
+
+#habrahabr {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:500px;
+  left:310px;
+}
+
+#other {
+  position: absolute;
+  padding-top: 10px;
+  height: 50px;
+  width: 200px;
+  top:580px;
+  left:30px;
+  text-align: center;
+}
+
+#gtranslate {
+  position: absolute;
+  height: 60px;
+  width: 60px;
   top:580px;
   left:240px;
 }
 
+#rutracker {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:580px;
+  left:310px;
+}
+
+#lichess {
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top:580px;
+  left:380px;
+}
+
 #schedule {
   position: absolute;
+  border: 2px solid black;
   top: 20px;
   left: 600px;
 }
