--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-body {
+div {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 30px;
+  position: absolute;
 }
 
 #media {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -14,7 +14,6 @@ body {
 }
 
 #youtube {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:20px;
@@ -22,7 +21,6 @@ body {
 }
 
 #twitch {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:20px;
@@ -30,7 +28,6 @@ body {
 }
 
 #soundcloud {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:20px;
@@ -38,7 +35,6 @@ body {
 }
 
 #social {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -48,7 +44,6 @@ body {
 }
 
 #vk {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:100px;
@@ -56,7 +51,6 @@ body {
 }
 
 #instagram {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:100px;
@@ -64,7 +58,6 @@ body {
 }
 
 #twitter {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:100px;
@@ -72,7 +65,6 @@ body {
 }
 
 #facebook {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:100px;
@@ -80,7 +72,6 @@ body {
 }
 
 #search {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -90,7 +81,6 @@ body {
 }
 
 #google {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:180px;
@@ -98,7 +88,6 @@ body {
 }
 
 #yandex {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:180px;
@@ -106,7 +95,6 @@ body {
 }
 
 #duckduckgo {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:180px;
@@ -114,7 +102,6 @@ body {
 }
 
 #mail {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -124,7 +111,6 @@ body {
 }
 
 #gmail {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:260px;
@@ -132,7 +118,6 @@ body {
 }
 
 #ymail {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:260px;
@@ -140,7 +125,6 @@ body {
 }
 
 #clouds {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -150,7 +134,6 @@ body {
 }
 
 #gdrive {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:340px;
@@ -158,7 +141,6 @@ body {
 }
 
 #ydisk {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:340px;
@@ -166,7 +148,6 @@ body {
 }
 
 #dropbox {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:340px;
@@ -174,7 +155,6 @@ body {
 }
 
 #programming {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -184,7 +164,6 @@ body {
 }
 
 #github {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:420px;
@@ -192,7 +171,6 @@ body {
 }
 
 #javarush {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:420px;
@@ -200,7 +178,6 @@ body {
 }
 
 #ideone {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:420px;
@@ -208,7 +185,6 @@ body {
 }
 
 #wolfram {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:420px;
@@ -216,7 +192,6 @@ body {
 }
 
 #mathway {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:420px;
@@ -224,7 +199,6 @@ body {
 }
 
 #read {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -234,7 +208,6 @@ body {
 }
 
 #anon {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:500px;
@@ -242,7 +215,6 @@ body {
 }
 
 #habrahabr {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:500px;
@@ -250,7 +222,6 @@ body {
 }
 
 #other {
-  position: absolute;
   padding-top: 10px;
   height: 50px;
   width: 200px;
@@ -260,7 +231,6 @@ body {
 }
 
 #gtranslate {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:580px;
@@ -268,7 +238,6 @@ body {
 }
 
 #rutracker {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:580px;
@@ -276,16 +245,27 @@ body {
 }
 
 #lichess {
-  position: absolute;
   height: 60px;
   width: 60px;
   top:580px;
   left:380px;
 }
 
+#hh {
+  height: 60px;
+  width: 60px;
+  top:580px;
+  left:450px;
+}
+
 #schedule {
-  position: absolute;
   border: 2px solid black;
   top: 20px;
   left: 600px;
+}
+
+#time {
+  top: 20px;
+  left: 1000px;
+  font-size: 40px;
 }
